--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,16 +31,21 @@ jobs:
           ~/.gradle/wrapper
         key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
 
-    # 4️⃣  Make the debug APK (mobile module)
+    # 4️⃣ Grant permissions to the gradle script
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
+    # 5️⃣  Make the debug APK (mobile module)
     - name: Assemble Debug
       run: ./gradlew :mobile:assembleDebug
 
-    # 5️⃣  Upload artifact
+    # 6️⃣  Debug: List generated APK files
+    - name: List APK files
+      run: find mobile/build/outputs/apk/debug/ -name "*.apk" -ls
+
+    # 7️⃣  Upload artifact
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: Friday-Mobile-Debug
-        path: mobile/build/outputs/apk/debug/Friday-debug.apk
+        path: mobile/build/outputs/apk/debug/*.apk
