--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
 
+    <queries>
+        <intent>
+            <action android:name="android.service.voice.VoiceInteractionService" />
+        </intent>
+    </queries>
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -30,33 +38,35 @@
 
 
 
-        <!-- VoiceInteractionService -->
+        <!-- Voice Interaction (Assistant) service -->
         <service
-            android:name=".voice.FridayVoiceInteractionService"
+            android:name="me.dgol.friday.assistant.FridayVoiceInteractionService"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_VOICE_INTERACTION"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.service.voice.VoiceInteractionService"/>
+                <action android:name="android.service.voice.VoiceInteractionService" />
             </intent-filter>
             <meta-data
                 android:name="android.voice_interaction"
-                android:resource="@xml/voice_interaction_service"/>
+                android:resource="@xml/voice_interaction_service" />
         </service>
 
-        <!-- Session Service -->
+        <!-- Session service that creates FridayVoiceInteractionSession -->
         <service
-            android:name=".voice.FridayVoiceInteractionSessionService"
-            android:permission="android.permission.BIND_VOICE_INTERACTION"/>
+            android:name="me.dgol.friday.assistant.FridayVoiceInteractionSessionService"
+            android:permission="android.permission.BIND_VOICE_INTERACTION"
+            android:exported="false" />
 
-        <!-- Recognition Service (stub for now) -->
-        <service
-            android:name=".voice.FridayRecognitionService"
-            android:permission="android.permission.BIND_SPEECH_RECOGNITION_SERVICE"
-            android:exported="false">
+        <!-- Optional: direct ACTION_ASSIST handler -->
+        <activity
+            android:name="me.dgol.friday.assistant.AssistActivity"
+            android:exported="true"
+            android:excludeFromRecents="true">
             <intent-filter>
-                <action android:name="android.speech.RecognitionService"/>
+                <action android:name="android.intent.action.ASSIST" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </service>
+        </activity>
     </application>
-
 </manifest>
