--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         <service
             android:name="me.dgol.friday.assistant.FridayVoiceInteractionSessionService"
             android:permission="android.permission.BIND_VOICE_INTERACTION"
-            android:exported="false" />
+            android:exported="true" />
 
         <!-- Optional: direct ACTION_ASSIST handler -->
         <activity
