--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -60,12 +60,14 @@
 
         <!-- Optional: direct ACTION_ASSIST handler -->
         <activity
-            android:name="me.dgol.friday.assistant.FridayAssistantActivity"
+            android:name=".assistant.FridayAssistantActivity"
             android:exported="false"
             android:taskAffinity=""
             android:excludeFromRecents="true"
             android:showOnLockScreen="true"
             android:showWhenLocked="true"
-            android:turnScreenOn="true" />
+            android:turnScreenOn="true"
+            android:theme="@style/Theme.Friday.Assistant" />
+
     </application>
 </manifest>
